<resources>
    <string name="app_name">RunMeet</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speed">Speed</string>
    <string name="calori">Calories</string>
    <string name="burned_cal">Burned Cal</string>
    <string name="_140_kcal">140 Kcal</string>
    <string name="egg">Egg</string>
    <string name="run">Run</string>
    <string name="pause">Pause</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="my_route">My Route</string>
    <string name="set_speed_amp_goal"><![CDATA[Set Speed & Goal]]></string>
    <string name="set_goal">Set Goal</string>
    <string name="set_speed">Set Speed</string>
    <string name="start">Start</string>
    <string name="nearby_events">Nearby Events</string>
    <string name="type_your_message_here">type your message here...</string>
    <string name="runmeet">RunMeet</string>
    <string name="hello_there">Hello there!</string>
    <string name="nancy">Nancy</string>
    <string name="stop">Stop</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_runmeet">Please login to continue using RunMeet.</string>
    <string name="phone_number">Phone Number</string>
    <string name="mycontinue">Continue</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="_9_12_km_h">9 - 12 km/h</string>
    <string name="_6_9_km_h">6 - 9 km/h</string>
    <string name="_3_6_km_h">3 - 6 km/h</string>
    <string name="_0_3_km_h">0 - 3 km/h</string>
    <string name="facebook">Facebook</string>
    <string name="profile_detail">Profile Details</string>
    <string name="please_fill_in_details_below_to_continue_using_runmeet">Please fill In details below to continue using RunMeet.</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="social_conatct_whatsapp">Social Conatct(WhatsApp)</string>
    <string name="birthdate_yyyy_mm_dd">Birthdate (YYYY-MM-DD)</string>
    <string name="contact_id">Contact ID</string>
    <string name="_00_00_00">00 : 00 : 00</string>
    <string name="share">Share</string>
    <string name="_200kal"><font color="#132144" size="14">200</font>kal</string>
    <string name="_1_52km"><font color="#132144" size="14">1.52</font>KM</string>
    <string name="cal">Cal</string>
    <string name="distance">Distance</string>
    <string name="_9_04">9.04</string>
    <string name="speed_n_min_km">Speed\n(Min/KM)</string>
    <string name="show_nearby_user">Show nearby users</string>
    <string name="copy_link">Copy link</string>
    <string name="about_me">About Me</string>
    <string name="about_me_des">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam savoluptua. At vero eos et accusam et justo duo.</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="not_verified">Not Verified</string>
    <string name="status">Status</string>
    <string name="phone">Phone</string>
    <string name="social_info">Social Info</string>
    <string name="privacy">Privacy</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="verify_now">Verify Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam sa voluptua. At vero eos et accusam et justo duo.</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="please_enter_4_digit_code">Please enter 4 digit code</string>
    <string name="hide_me_in_meet">Hide me in MEET</string>
    <string name="hide_my_name">Hide my name</string>
    <string name="hide_my_photo">Hide my photo</string>
    <string name="hide_my_social_info">Hide my social info</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="show_location_names">Show location names</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip!</string>
    <string name="sign_up2">Sign Up!</string>
    <string name="please_create_your_account_for_using_the_run_meet">Please Create your account for using the Run Meet</string>
    <string name="_92">+92</string>
    <string name="enter_your_phone_no">Enter Your Phone No.</string>
    <string name="i_agree_to_the_privacy_amp_terms_and_conditions">I agree to the <font color="#064AF8">privacy</font><font color="#200e32"> &amp; </font><font color="#064AF8">Terms and Conditions</font></string>
    <string name="already_have_an_account_sign_in"> Already have an account?<font color="#ff80c2"> Sign In</font></string>
    <string name="donot_have_account"> I do not have an account?<font color="#ff80c2"> Sign Up</font></string>
    <string name="otp_verification">OTP Verification!</string>
    <string name="back">Back!</string>
    <string name="please_enter_your_otp_code_here">Please Enter Your OTP code here</string>
    <string name="proceed">Proceed!</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="notification">Notification!</string>
    <string name="an_otp_verification_code_has_been_send_to_your_number_verify_it">An OTP verification Code has been send to your Number. Verify It</string>
    <string name="profile_completion">Profile Completion!</string>
    <string name="enter_name">Enter Name</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="passwordx">Password</string>
    <string name="optional">Optional</string>
    <string name="description">Description</string>
    <string name="proceed2">Proceed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in2">Sign In!</string>
    <string name="please_sign_in_for_using_the_run_meet">Please Sign In for using the Run Meet</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password2">Forget Password!</string>
    <string name="please_enter_your_phone_no_for_reset_password">Please Enter Your Phone No for\nReset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification">Verification!</string>
    <string name="please_enter_your_verification_code_here">Please Enter Your Verification code here</string>
    <string name="enter_code">Enter code</string>
    <string name="choose_password">Choose Password!</string>
    <string name="choose_new_password">Choose New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="report">Report!</string>
    <string name="title">Title</string>
    <string name="send">Send</string>
    <string name="notifications">Notifications!</string>
    <string name="lorem_ipsum_is_just_started">Lorem ipsum is just started</string>
    <string name="report2">Report</string>
    <string name="view_setting">View Setting!</string>
    <string name="about_us_text">Lorem Ipsum is simply dummy text of t he printing and typesetting industry.Lorem Ipsum has been the industry standard dummy text ever since the 15o Os, when an unknown printer took a ga lley of type and scrambled it to make a type specimen book. It has survived n ot only five centuries, but also the leapi nto electronic typesetting, remaining e ssentially unchanged</string>
    <string name="about_us2">About Us!</string>
    <string name="privacy_policy2">Privacy Policy!</string>
    <string name="terms_amp_conditions2"><![CDATA[Terms & Conditions!]]></string>
    <string name="_1998_10_01">1998-10-01</string>
    <string name="target_cal">Target Cal</string>
    <string name="share_on">Share on</string>

</resources>