<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_bg"
    android:id="@+id/llProfileDetal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/profile_detail"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/please_fill_in_details_below_to_continue_using_runmeet"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_10ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/pink_stroke_bg"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/name"
        android:focusable="false"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_10ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:weightSum="2"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        >

        <TextView
            android:id="@+id/btnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/btn_gender_text_selector"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:background="@drawable/btn_bg_color"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            />
        <TextView
            android:id="@+id/btnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:gravity="center"
            android:textColor="@color/btn_gender_text_selector"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/btn_bg_color"
            android:paddingVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            />


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/pink_stroke_bg"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/birthdate_yyyy_mm_dd"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_10ssp"
        android:focusable="false"
        android:paddingEnd="@dimen/_12sdp"
        android:drawableEnd="@drawable/ic_drop_down"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/pink_stroke_bg"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/social_conatct_whatsapp"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_10ssp"
        android:focusable="false"
        android:layout_marginVertical="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:drawableEnd="@drawable/ic_drop_down"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/pink_stroke_bg"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/contact_id"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_10ssp"
        android:paddingEnd="@dimen/_12sdp"
        android:focusable="false"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:text="@string/mycontinue"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:gravity="center"
        />



</LinearLayout>