<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/main_bg"
    tools:context=".views.fragments.mainFragments.EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        android:gravity="center|start">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            >


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:src="@drawable/ic_arrow_forward"
                app:tint="@color/dark_black2" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/dark_black2"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/name"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:hint="@string/nancy"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:fontFamily="@font/montserrat_medium"
        android:textColorHint="@color/light_black"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/birthdate"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:hint="@string/_1998_10_01"
        android:letterSpacing="0.17"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:fontFamily="@font/montserrat_medium"
        android:textColorHint="@color/light_black"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/gender"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_12ssp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:weightSum="2"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:gravity="center"
            android:background="@drawable/btn_bg"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:gravity="center"
            android:textColor="#808080"
            android:textSize="@dimen/_10ssp"
            android:background="@drawable/white_rectangele"
            android:paddingVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:paddingStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/about_me"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:hint="@string/lorem"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:fontFamily="@font/montserrat_medium"
        android:textColorHint="@color/light_black"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_9ssp" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:text="@string/save"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:gravity="center"
        />



</LinearLayout>