<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/layout_gradient">

        <TextView
            android:id="@+id/viewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/view_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_below="@id/viewSignUp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/white" />

        <View
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_below="@id/btnBack"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btnAboutUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/light_black2"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/btnPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/light_black2"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/btnTermsAndCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/terms_amp_conditions"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/light_black2"
        android:layout_marginHorizontal="@dimen/_20sdp"
        />
</LinearLayout>