<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".views.fragments.mainFragments.SocialInfoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        android:gravity="center|start">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            >
            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:rotation="180"
                android:src="@drawable/ic_arrow_forward"
                app:tint="@color/dark_black2" />


        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/social_info"
            android:textColor="@color/dark_black2"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/whatsapp"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/_10ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/pink_stroke_bg"
        android:hint="923006997800"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:text="@string/save"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:gravity="center"
        />



</LinearLayout>